# Axi

./: .gitignore  AXI_AGENT_PROTOCOL_v0.md  AXI_EXPERIENCE_CAPSULE_PROTOCOL.md  AXI_HUMAN_RESOURCE_CONTRACTS.md  AXI_UPGRADE_TASKFORCE_BRIEF.md  Cargo.toml  DEADLINE.md  DIBL_SCHEMA.md  GENESIS_CANONICAL_AUDIT.md  MAINNET_PREP_STATUS.md  PHASE_A_ACCEPTANCE.md  PHASE_B_ACCEPTANCE.md  PHASE_MAINNET_PREP.md  PHASE_STATUS.md  SECURITY_AUDIT.md  STATUS.md  project.md
docs/adoption/: AGENT_ONBOARDING_GUIDE.md  AXI_ADOPTION_TEAM.md  AXI_ONE_PAGER.md  REAL_CASES.md
docs/architecture/: AUCTION.md  COMM_STACK_OVERVIEW.md  FORUM.md  MARKET.md  PRIVATE_MESH.md  PUBLIC_SQUARE.md  SHARED_IDENTITY_TRUST.md
docs/governance/: DIBL_v0_1_RELEASE.md  M1_SECURITY_SIGNOFF.md  M4_PRERELEASE_CHECKLIST.md  P1_2_PHASE2_DESIGN.md  P1_2_REFACTOR_DESIGN.md
docs/identity/: ADMISSION_REVIEW.md  DEVICE_UNIQUENESS_POLICY.md  IDENTITY_POLICY.md  MODERATION_AND_ABUSE.md  REPUTATION_BINDING.md  WALLET_TRANSITION_POLICY.md
docs/product/: MVP_SCOPE.md  RISK_REGISTER.md
experiments/: INTERRUPTED_RUN_20260315.md  check_status.sh  ralph_orchestrator.py
experiments/results/: hour_1_decision.json  hour_1_metrics.json  hour_2_config.json
schemas/: admission_request.schema.json  agent_identity.schema.json  listing.schema.json  private_message.schema.json  wallet_binding.schema.json
src/: lib.rs  main.rs
src/core/: genesis.rs
src/governance/: broadcast.rs  event.rs  features.rs  features_tests.rs  gates.rs  mod.rs  projection.rs  runtime.rs  store.rs
src/identity/: admission.rs  device.rs  (+7 more)
test_vectors/: axi_sample.jsonl
(+17 files in other folders)
