[package]
name = "axi"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
secp256k1 = { version = "0.27", features = ["rand", "global-context"] }
rand = "0.8"

[lib]
name = "axi"
path = "src/lib.rs"

[[bin]]
name = "axi"
path = "src/main.rs"
