[package]
name = "axi"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
secp256k1 = { version = "0.27", features = ["rand", "global-context", "recovery"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "axi"
path = "src/lib.rs"

[[bin]]
name = "axi"
path = "src/main.rs"
